--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,13 @@ Pos=890,13
 Size=550,680
 Collapsed=0
 
+[Window][MaterialData]
+Pos=60,60
+Size=273,250
+Collapsed=0
+
+[Window][settings]
+Pos=284,76
+Size=407,246
+Collapsed=0
+
