--- a/CG2-25-LE2C23.vcxproj.filters
+++ b/CG2-25-LE2C23.vcxproj.filters
@@ -57,10 +57,10 @@
     <ClCompile Include="DirectEngine.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="base\DX12Comon.cpp">
+    <ClCompile Include="WinApp.cpp">
       <Filter>Base</Filter>
     </ClCompile>
-    <ClCompile Include="WinApp.cpp">
+    <ClCompile Include="DX12Comon.cpp">
       <Filter>Base</Filter>
     </ClCompile>
   </ItemGroup>
@@ -109,10 +109,10 @@
     <ClInclude Include="DirectEngine.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="base\DX12Comon.h">
+    <ClInclude Include="WinApp.h">
       <Filter>Base</Filter>
     </ClInclude>
-    <ClInclude Include="WinApp.h">
+    <ClInclude Include="DX12Comon.h">
       <Filter>Base</Filter>
     </ClInclude>
   </ItemGroup>
