--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -19,5 +19,8 @@ jobs:
          uses: microsoft/setup-msbuild@v2
          with:
            msbuild-architecture: x64
+      -  name: Build
+         run: |
+           masbuild ${{env.SOLUTION_FILE_PATH}} /p:Platform=x64,Configuration=${{env.CONFIGURATION}}
     
   
