--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -5,7 +5,7 @@ on:
       - master
 env:
   # リポジトリのルートディレクトリを起点としたソリューションファイルパス
-  SOLUTION_FILE_PATH: project/CG2-25-LE2C23.sln
+  SOLUTION_FILE_PATH: CG2-25-LE2C23.sln
   # Visual Studio の構成
   CONFIGURATION: Debug
 jobs:
