--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -78,11 +78,11 @@
     <ClCompile Include="engine\math\MassFunction.cpp">
       <Filter>engine\math</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>engine\Input</Filter>
-    </ClCompile>
     <ClCompile Include="engine\input\Input.cpp">
       <Filter>engine\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -128,7 +128,7 @@
       <Filter>engine\2d</Filter>
     </ClInclude>
     <ClInclude Include="engine\input\Input.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>engine\Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
