--- a/.gitignore
+++ b/.gitignore
@@ -318,3 +318,9 @@ DirectXGame/imgui.ini
 # DirectXTex Compiled Shaders
 **/DirectXTex/Shaders/Compiled/
 /Dumps
+
+
+project/logs/
+project/Dumps/
+project/externals/imgui/my_imgui_settings.ini/
+
