--- a/.github/workflows/ReleaseBuild.yml
+++ b/.github/workflows/ReleaseBuild.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
 env:
-  SOLUTION_FILE_PATH: CG2-25-LE2C23.sln
+  SOLUTION_FILE_PATH: project/CG2-25-LE2C23.sln
 
   CONFIGURATION: Release
 jobs:
