--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -15,6 +15,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="engine\2d\Vector2.cpp" />
+    <ClCompile Include="engine\3d\Vector3.cpp" />
     <ClCompile Include="engine\base\D3DResourceLeakChecker.cpp" />
     <ClCompile Include="engine\base\DXCommon.cpp" />
     <ClCompile Include="engine\audio\Audio.cpp" />
@@ -57,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\2d\Data.h" />
+    <ClInclude Include="engine\2d\Vector2.h" />
+    <ClInclude Include="engine\3d\Vector3.h" />
     <ClInclude Include="engine\base\D3DResourceLeakChecker.h" />
     <ClInclude Include="engine\base\DXCommon.h" />
     <ClInclude Include="engine\audio\Audio.h" />
