--- a/CG2-25-LE2C23.vcxproj.filters
+++ b/CG2-25-LE2C23.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClInclude Include="Audio.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="particle.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="externals\imgui\LICENSE.txt">
