--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -114,6 +114,12 @@
     <ClCompile Include="engine\2d\TextureManager.cpp">
       <Filter>engine\2d</Filter>
     </ClCompile>
+    <ClCompile Include="Object3d.cpp">
+      <Filter>engine\3d</Filter>
+    </ClCompile>
+    <ClCompile Include="Object3dCommon.cpp">
+      <Filter>engine\3d</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="resources\shaders\Object3d\Object3d.PS.hlsl">
@@ -192,6 +198,12 @@
     </ClInclude>
     <ClInclude Include="engine\2d\TextureManager.h">
       <Filter>engine\2d</Filter>
+    </ClInclude>
+    <ClInclude Include="Object3d.h">
+      <Filter>engine\3d</Filter>
+    </ClInclude>
+    <ClInclude Include="Object3dCommon.h">
+      <Filter>engine\3d</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
