--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,12 @@ Size=550,680
 Collapsed=0
 
 [Window][MaterialData]
-Pos=602,157
-Size=559,456
+Pos=780,590
+Size=559,32
+Collapsed=0
+
+[Window][ParticleData]
+Pos=27,100
+Size=669,526
 Collapsed=0
 
