--- a/CG2-25-LE2C23.vcxproj
+++ b/CG2-25-LE2C23.vcxproj
@@ -27,7 +27,7 @@
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Development|x64'">MaxSpeed</Optimization>
       <WholeProgramOptimization Condition="'$(Configuration)|$(Platform)'=='Development|x64'">true</WholeProgramOptimization>
     </ClCompile>
-    <ClCompile Include="MassFunction.cpp" />
+    <ClCompile Include="MathFunction.cpp" />
     <ClCompile Include="particle.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -74,7 +74,7 @@
     <ClInclude Include="externals\imgui\imstb_rectpack.h" />
     <ClInclude Include="externals\imgui\imstb_textedit.h" />
     <ClInclude Include="externals\imgui\imstb_truetype.h" />
-    <ClInclude Include="MassFunction.h" />
+    <ClInclude Include="MathFunction.h" />
     <ClInclude Include="particle.h" />
     <ClInclude Include="Vector4.h" />
   </ItemGroup>
