--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -120,6 +120,12 @@
     <ClCompile Include="engine\3d\Object3dCommon.cpp">
       <Filter>engine\3d</Filter>
     </ClCompile>
+    <ClCompile Include="engine\3d\ModelCommon.cpp">
+      <Filter>engine\3d</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\3d\Model.cpp">
+      <Filter>engine\3d</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="resources\shaders\Object3d\Object3d.PS.hlsl">
@@ -190,9 +196,6 @@
     <ClInclude Include="engine\2d\Vector2.h">
       <Filter>engine\2d</Filter>
     </ClInclude>
-    <ClInclude Include="engine\2d\Data.h">
-      <Filter>engine\3d</Filter>
-    </ClInclude>
     <ClInclude Include="engine\3d\Vector3.h">
       <Filter>engine\3d</Filter>
     </ClInclude>
@@ -203,6 +206,12 @@
       <Filter>engine\3d</Filter>
     </ClInclude>
     <ClInclude Include="engine\3d\Object3dCommon.h">
+      <Filter>engine\3d</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\3d\Model.h">
+      <Filter>engine\3d</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\3d\ModelCommon.h">
       <Filter>engine\3d</Filter>
     </ClInclude>
   </ItemGroup>
