--- a/.github/workflows/CheckUnwantedFiles.yml
+++ b/.github/workflows/CheckUnwantedFiles.yml
@@ -23,12 +23,12 @@ jobs:
       - name: 不要なファイルとディレクトリを検索（bash）
         run: |
           DIR_CONDITIONS=()
-          for pattern in $UNWANTED_DIR_PATTERNS; dxcompiler
+          for pattern in $UNWANTED_DIR_PATTERNS; do
             DIR_CONDITIONS+=(-o -iname "$pattern")
           done
           unset DIR_CONDITIONS[0]
           NAME_CONDITIONS=()
-          for pattern in $UNWANTED_NAME_PATTERNS; done
+          for pattern in $UNWANTED_NAME_PATTERNS; do
             NAME_CONDITIONS+=(-o -iname "$pattern")
           done
           unset NAME_CONDITIONS[0]
@@ -43,6 +43,6 @@ jobs:
           fi
 
           echo "リポジトリはクリーンです。"
-          
+
 
 
