--- a/.github/workflows/CheckUnwantedFiles.yml
+++ b/.github/workflows/CheckUnwantedFiles.yml
@@ -36,7 +36,7 @@ jobs:
             \( \( "${DIR_CONDITIONS[@]}" \) -a -type d -print -prune \) -o \
             \( \( "${NAME_CONDITIONS[@]}" \) -a -type f -print \) \
           )
-          if [ -n "UNWANTED_LIST" ]; then
+          if [ -n "$UNWANTED_LIST" ]; then
             echo "::error::不要なファイルまたはディレクトリが見つかりました！"
             echo "$UNWANTED_LIST"
             exit 1
